Work on supporting reply messages, CSS to organize the add_task page, and work on tags for tasks

--- a/client/templates/common_includes.html
+++ b/client/templates/common_includes.html
@@ -1,4 +1,5 @@
 <script type="text/javascript" src="http://code.jquery.com/jquery.js" charset="utf-8"></script>
+<script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.min.js" charset="utf-8"></script>
 <script type="text/javascript" src="/bootstrap/js/bootstrap.min.js" charset="utf-8"></script>
 <link href='http://fonts.googleapis.com/css?family=Marmelad' rel='stylesheet' type='text/css'></link>
 <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css"></link>
