--- a/client/templates/add_task.html
+++ b/client/templates/add_task.html
@@ -3,7 +3,9 @@
 	<head>
 		<% include "common_includes.html" %>
 		<script type="text/javascript" src="/js/add_task.js" charset="utf-8"></script>
-		<link rel="stylesheet" type="text/css" href="/css/room.css"></link>
+		<script type="text/javascript" src="/select2/dist/js/select2.min.js" charset="utf-8"></script>
+		<link rel="stylesheet" type="text/css" href="/css/add_task.css"></link>
+		<link rel="stylesheet" type="text/css" href="/select2/dist/css/select2.min.css"></link>
 		<title id="page_title">Add directive | Crisis Flow</title>
 		
 		<meta name="room_id" content="<%- @room_id %>"/>
@@ -11,19 +13,40 @@
 	<body>
 		<% include "navbar.html" %>
 		<div id="body_content">
-			<h2>Add directive</h2>
+			<div class="row_container">
+				<h2>Add directive</h2>
+			</div>
 			<form id="add_task_form"  class="form" action="/add_task/<%- @room_id %>" method="post" enctype="multipart/form-data">
-				<input id="task_title" name="title" type="text" form="add_task_form" class="form-control" placeholder="Title"/>
-				<textarea id="task_content" name="content" form="add_task_form" class="form-control" placeholder="Enter the contents of the directive here..."></textarea>
-				<input id="high_priority_input" name="high_priority" form="add_task_form" value="false" type="hidden"/>
-				<div id="upload_files" data-num-files="1">
-					<p>Attach any files pertaining to the directive here:</p>
-					<input type="file" name="file1" class="form-control" id="file1" form="add_task_form"></input>
+				<div class="row_container">
+					<input id="task_title" name="title" type="text" form="add_task_form" class="form-control" placeholder="Title"/>
+					<button id="high_priority_button" type="button" class="btn btn-default" data-high-priority="false">Mark as high priority</button>
+					<input id="high_priority_input" name="high_priority" form="add_task_form" value="false" type="hidden"/>
 				</div>
-				<button id="additional_files_button" type="button" class="btn btn-default">Add more files...</button>
-				<button id="high_priority_button" type="button" class="btn btn-default">Mark as high priority</button>
-				<button id="submit_task" class="btn btn-primary" type="submit">Submit directive</button>
-				<a href="/rooms/<%- @room_id %>" id="never_mind" class="btn btn-default" role="button" type="submit">Never mind</a>
+				<div class="row_container">
+					<textarea id="task_content" name="content" form="add_task_form" class="form-control" placeholder="Enter the contents of the directive here..."></textarea>
+				</div>
+				<div class="row_container">
+					<div id="form_tagging">
+						<p>Add relevant tags to this directive:</p>
+						<select id="task_tags" class="form-control" multiple="multiple" name="tags" form="add_task_form">
+								<option val="def">DEFAULT</option>
+							<% for tag in @tags : %>
+								<option value="<%- tag.id %>" data-preexisting-tag="true"><%= tag.name %></option>
+							<% end %>
+						</select>
+					</div>
+					<div id="form_file_upload">
+						<p>Attach any files pertaining to the directive here:</p>
+						<div id="upload_files" data-num-files="1">
+							<input id="file1" type="file" name="file1" class="file_input form-control" form="add_task_form"></input>
+						</div>
+						<button id="additional_files_button" type="button" class="btn btn-default">Add more files...</button>
+					</div>
+				</div>
+				<div class="row_container">
+					<button id="submit_task" class="btn btn-primary" type="submit">Submit directive</button>
+					<a href="/rooms/<%- @room_id %>" id="never_mind" class="btn btn-default" role="button" type="submit">Never mind</a>
+				</div>
 			</form>
 		</div>
 	</body>
