--- a/client/templates/add_task.html
+++ b/client/templates/add_task.html
@@ -31,7 +31,7 @@
 						<select id="task_tags" class="form-control" multiple="multiple" name="tags" form="add_task_form">
 								<option val="def">DEFAULT</option>
 							<% for tag in @tags : %>
-								<option value="<%- tag.id %>" data-preexisting-tag="true"><%= tag.name %></option>
+								<option value="<%- tag.id %>"><%= tag.name %></option>
 							<% end %>
 						</select>
 					</div>
