--- a/client/templates/common_includes.html
+++ b/client/templates/common_includes.html
@@ -1,6 +1,6 @@
 <script type="text/javascript" src="http://code.jquery.com/jquery.js" charset="utf-8"></script>
 <script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.min.js" charset="utf-8"></script>
 <script type="text/javascript" src="/bootstrap/js/bootstrap.min.js" charset="utf-8"></script>
-<link href='http://fonts.googleapis.com/css?family=Marmelad' rel='stylesheet' type='text/css'></link>
+<link href="http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic|Open+Sans:400italic,400,700|Montserrat" rel="stylesheet" type="text/css"></link>
 <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css"></link>
 <link rel="stylesheet" type="text/css" href="/css/base.css"></link>
