--- a/client/css/index.css
+++ b/client/css/index.css
@@ -5,10 +5,10 @@
 
 .room {
 	display: inline-block;
-	background-color: rgba(255, 255, 255, 0.4);
-	-moz-box-shadow: 1px 1px 3px 3px #3D3D3D;
-	-webkit-box-shadow: 1px 1px 3px 3px #3D3D3D;
-	box-shadow: 1px 1px 3px 3px #3D3D3D;
+	background-color: rgba(255, 255, 255, 0.1);
+	-moz-box-shadow: 1px 1px 3px 3px #141313;
+	-webkit-box-shadow: 1px 1px 3px 3px #141313;
+	box-shadow: 1px 1px 3px 3px #141313;
 	padding: 10px;
 	text-align: center;
 	margin: 10px 10px;
