--- a/client/templates/signin.html
+++ b/client/templates/signin.html
@@ -15,8 +15,8 @@
 			<h2>Welcome to Crisis Flow!</h2>
 			<div id="signin_wrapper">
 				<form id="signin_form" class="form-inline">
-					<input id="username" type="text" placeholder="Username"/>
-					<input id="password" type="password" placeholder="Password"/>
+					<input id="username" class="form-control" type="text" placeholder="Username"/>
+					<input id="password" class="form-control" type="password" placeholder="Password"/>
 					<button id="submit_signin" class="btn btn-primary" type="submit">Sign in</button>
 				</form>
 				<p>Don't have an account? <a href="/signup">Sign up here</a>.</p>
