--- a/client/templates/signup.html
+++ b/client/templates/signup.html
@@ -15,9 +15,9 @@
 			<h2>Welcome to Crisis Flow!</h2>
 			<div id="signup_wrapper">
 				<form id="signup_form" class="form-inline">
-					<input id="username" type="text" placeholder="Username"/>
-					<input id="password" type="password" placeholder="Password"/>
-					<input id="access_code" type="text" placeholder="Access code"/>
+					<input id="username" class="form-control" type="text" placeholder="Username"/>
+					<input id="password" class="form-control" type="password" placeholder="Password"/>
+					<input id="access_code" class="form-control" type="text" placeholder="Access code"/>
 					<button id="submit_signup" class="btn btn-primary" type="submit">Sign up</button>
 				</form>
 				<p>Already have an account? <a href="/signin">Sign in here</a>.</p>
