--- a/client/css/base.css
+++ b/client/css/base.css
@@ -26,6 +26,10 @@ a.btn {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+.btn span {
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
 a {
 	cursor: pointer;
 	text-decoration: none;
