The beginnings of integrating Angular.js into the app. Right now it's just going to be used on the room page to help the view keep up with socket.io

--- a/client/css/room.css
+++ b/client/css/room.css
@@ -153,6 +153,7 @@ a:hover.attachment_link { /* we want default bootstrap link colors for these */
 	display: inline;
 	padding: 3px;
 	border-radius: 3px;
+	margin-right: 3px;
 }
 
 .message {
