--- a/client/css/room.css
+++ b/client/css/room.css
@@ -76,7 +76,7 @@
 
 .task {
 	margin-bottom: 2px;
-	padding: 2px 11px;
+	padding: 5px 11px;
 	border: 1px solid #141313;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
@@ -101,6 +101,10 @@
 	font-weight: bold;
 }
 
+.task_summary {
+	margin-top: 3px;
+}
+
 .reply_link {
 	font-weight: bold;
 }
@@ -113,7 +117,7 @@
 
 .task_preview_tags_list {
 	display: block;
-	margin-top: 2px;
+	margin-top: 3px;
 	margin-bottom: 2px;
 }
 
@@ -154,6 +158,12 @@ a:hover.attachment_link { /* we want default bootstrap link colors for these */
 	padding: 3px;
 	border-radius: 3px;
 	margin-right: 3px;
+}
+
+.task_status {
+	text-align: right;
+	right: 11px;
+	position: absolute;
 }
 
 .message {
