Sending message workflow is now in Angular, textarea captures enter keypresses to send message

--- a/client/css/room.css
+++ b/client/css/room.css
@@ -126,8 +126,12 @@
 	margin-top: 3px;
 }
 
-.reply_link {
+.reply_forward_link {
 	font-weight: bold;
+}
+
+.reply_backward_link {
+	font-style: italic;
 }
 
 .task_detail_tags_list {
