--- a/client/css/base.css
+++ b/client/css/base.css
@@ -22,6 +22,14 @@ p,a,label,span {
 	color: #E3E3E3;
 }
 
+.bold {
+	font-weight: bold;
+}
+
+.italic {
+	font-style: italic;
+}
+
 a.btn {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
