--- a/client/css/add_task.css
+++ b/client/css/add_task.css
@@ -16,6 +16,14 @@
 	background-color: #E3E3E3 !important;
 }
 
+.select2-dropdown {
+	background-color: #E3E3E3 !important;
+}
+
+.select2-results__option {
+	color: #141313;
+}
+
 #task_title {
 	max-width: 500px;
 	display: inline-block;
