Some UI touchups

--- a/client/templates/room.html
+++ b/client/templates/room.html
@@ -48,10 +48,10 @@
 							</div>
 							<button ng-click="retreatTaskStatus(task.id)" ng-show="task.status > 0" type="button" class="task_status_retreat btn btn-default">
 								<span class="left_arrow">&#10152;</span>
-								<span>{{ statusStrings[task.status - 1] }}</span>
+								<span>Revert to {{ statusStrings[task.status - 1] }}</span>
 							</button>
 							<button ng-click="advanceTaskStatus(task.id)" ng-show="task.status < 2" type="button" class="task_status_advance btn btn-primary">
-								<span>{{ statusStrings[task.status + 1] }}</span>
+								<span>Mark as {{ statusStrings[task.status + 1] }}</span>
 								<span>&#10152;</span>
 							</button>
 							<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
