--- a/client/templates/room.html
+++ b/client/templates/room.html
@@ -88,10 +88,10 @@
 			</div>
 			<div id="messaging_content">
 				<div id="messages">
-					<div ng-repeat="message in messages | orderBy:'time':false track by message.id" 
+					<div ng-repeat="message in messages | orderBy:'time':false track by message.id" id="message_{{ message.id }}"
 					class="message" data-toggle="tooltip" data-placement="left" data-message-time="{{ message.time }}">
 						<a class="reply_forward_link bold" ng-click="initReply(message.id)">{{ message.author }}:</a>
-						<p class="reply_backward_link italic" ng-show="message.reply >= 0">(reply to message {{ message.reply }})</p>
+						<p class="reply_backward_link" ng-show="message.reply >= 0">(<a ng-click="jumpToReplyTarget(message.reply)" class="italic">reply to {{ message.author }}</a>)</p>
 						<p>{{ message.content }}</p>
 					</div>
 				</div>
