Clicking on a reply-target link scrolls to the reply target, UI touch ups

--- a/client/templates/room.html
+++ b/client/templates/room.html
@@ -4,6 +4,7 @@
 		<% include "common_includes.html" %>
 		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.6.0/moment.min.js" charset="utf-8"></script>
 		<script type="text/javascript" src="/autosize/jquery.autosize.min.js"></script>
+		<script type="text/javascript" src="/animate-shadow/jquery.animate-shadow.min.js"></script>
 		<script type="text/javascript" src="/js/room.js" charset="utf-8"></script>
 		<link rel="stylesheet" type="text/css" href="/css/room.css"></link>
 		<title id="page_title"><%= @room.name %> | Crisis Flow</title>
