--- a/client/templates/task_archive.html
+++ b/client/templates/task_archive.html
@@ -5,9 +5,9 @@
 		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.6.0/moment.min.js" charset="utf-8"></script>
 		<script type="text/javascript" src="/autosize/jquery.autosize.min.js"></script>
 		<script type="text/javascript" src="/animate-shadow/jquery.animate-shadow.min.js"></script>
-		<script type="text/javascript" src="/js/room.js" charset="utf-8"></script>
-		<link rel="stylesheet" type="text/css" href="/css/room.css"></link>
-		<title id="page_title"><%= @room.name %> | Crisis Flow</title>
+		<script type="text/javascript" src="/js/task_archive.js" charset="utf-8"></script>
+		<link rel="stylesheet" type="text/css" href="/css/task_archive.css"></link>
+		<title id="page_title"><%= @room.name %> Archive | Crisis Flow</title>
 		
 		<meta name="room_id" content="<%- @room.id %>"/>
 		<meta name="username" content="<%- @username %>"/>
@@ -63,12 +63,12 @@
 		</div>
 		<% include "navbar.html" %>
 		<div id="body_content">
-			<h2>{{ room.name }}</h2>
+			<h2>{{ room.name }} - Task Archive</h2>
 			<div id="task_content">
 				<div id="tasks">
 					<div id="task_wrapper">
 						<!-- task entry in task queue -->
-						<div ng-repeat="task in tasks | orderBy:'time':true track by task.id" ng-if="task.status >= 0 && task.status < 2" id="task_{{ task.id }}" 
+						<div ng-repeat="task in tasks | orderBy:'time':true track by task.id" id="task_{{ task.id }}" 
 						class="task" data-toggle="tooltip" data-placement="right" data-task-time="{{ task.time }}">
 							<span ng-show="task.high_priority" class="glyphicon glyphicon-exclamation-sign"></span>
 							<a class="task_title bold" data-toggle="modal" data-target="#task_detail_{{ task.id }}">{{ task.title }}</a>
@@ -85,35 +85,8 @@
 						</div>
 					</div>
 				</div>
-				<a ng-href="/add_task/{{ room.id }}" id="add_task" class="btn btn-primary" type="submit">Add a new directive</a>
 			</div>
-			<div id="messaging_content">
-				<div id="messages">
-					<div ng-repeat="message in messages | orderBy:'time':false track by message.id" id="message_{{ message.id }}"
-					class="message" data-toggle="tooltip" data-placement="left" data-message-time="{{ message.time }}">
-						<a class="reply_forward_link bold" ng-click="initReply(message.id)">{{ message.author }}:</a>
-						<p class="reply_backward_link" ng-show="message.reply >= 0">(<a ng-click="jumpToReplyTarget(message.reply)" class="italic">reply to {{ message.author }}</a>)</p>
-						<p>{{ message.content }}</p>
-					</div>
-				</div>
-				<form id="add_message_form" class="form-inline" ng-submit="addMessage()">
-					<textarea id="input_message" class="form-control" ng-model="inputMessage" 
-					ng-keypress="enterInputMessage($event)" autofocus="true" data-toggle="popover" 
-					placeholder="Hi, {{ username }}! Say something…">
-					</textarea>
-					<button id="send_message" class="btn btn-primary" type="submit">Send</button>
-				</form>
-			</div>
-		</div>
-		<div id="sidebar">
-			<div id="sidebar_content">
-				<h4>Members</h4>
-				<div id="members">
-					<p class="member" ng-repeat="member in members | orderBy:'username' track by member.username">{{ member.username }} <span ng-show="member.idle">(<span class="italic">away</span>)</span></p>
-				</div>
-				<a href="/rooms/<%- @room.id %>/archive/messages">Go to message archive</a>
-				<a href="/rooms/<%- @room.id %>/archive/tasks">Go to task archive</a>
-			</div>
+			<a href="/rooms/<%- @room.id %>" class="btn btn-default row">Return to room</a>
 		</div>
 	</body>
 </html>
